# rpn-calculator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  roadmap.md  todo.md
app/: app.py
app/db/: models.py  sessions.py
app/routers/: rpn.py
tests/: test_rpn.py
